--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -67,7 +67,7 @@ Mint: `Bob`
 - `C'` promise (blinded signature)
 - `C` proof (unblinded signature)
 
-**Problem:** When `Alice` (interchangeable with `Carol`) gives `Bob` the token `(x, C)`, `Bob` may include this token in his burn attestation, but he may choose to not honor his side in the transaction, like pying an lightning invoice, or handing out new ecash tokens in exchange. `Bob` can steal from `Alice`, and `Alice` has no way to prove it.
+**Problem:** When `Alice` (interchangeable with `Carol`) gives `Bob` the token `(x, C)`, `Bob` may include this token in his burn attestation, but he may choose to not honor his side in the transaction, like paying an lightning invoice, or handing out new ecash tokens in exchange. `Bob` can steal from `Alice`, and `Alice` has no way to prove it.
 
 **Solution:** Make `Bob` sign a *committment* to a transaction he will carry out if some specific secret is revealed by `Alice`. *(Generally it would be a set of secrets, but for the sake of simplicity we will describe the schemes with a singular token)*
 
