--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -77,15 +77,22 @@ Mint: `Bob`
 
 **Public challenge:** in case `Bob` does not respond to a private challenge by `Alice`, she can challenge `Bob` in the *court of public* as in openly on a public forum. By ignoring this challenge or abandoning it prematurely `Bob` would admit to fraud to any observers of the proof session.
 
+## Minting Notes Fraud Proof
+1. After `Bob` signed a commitment to a transaction, which in this case requires `Alice` paying a lightning invoice, what he signs is that he will give `Alice` the `C'` for her `B' (+DLEQ proof)` if the invoice is paid. More precisely if the `payment_secret` preimage for the sha256 `payment_hash` is revealed to him.
+2. `Alice` by paying the invoice receives the `payment_secret` the `payment_hash` in the invoice, normally she gets `C' + DLEQ`.
+3. If `Bob` tries to defraud `Alice`, she will publish his signed message (which contains the `payment_hash`), and the `payment_secret`, proving she has completed her duty.
+4. Then `Bob` has to publish in defense the DLEQ including `C'`
+5. This allows `Aice` to get `(x, C)`
+
 ## Spending Notes Fraud Proof
 1. `Alice` shall not reveal `x` when asking the mint if `Bob` will honor a note or not! Make `Bob` sign the answer with his key!
 2. If the answer is yes, ask `Bob` to sign a commitment to `Alice's` transaction, that he will honor it (can be an ln invoice), if `Alice` gives `Bob` the secret!
 3. If `Bob` signs the commitment but does not carry out his end it becomes provable (to different degrees)
 4. If `Bob` lies about his blind signature `Alice` can publicly shame him with her DLEQ proof
-5. `Bob` can prove when you paid an ln invoice such a 'receipt' is possible. so the mint can be challenged to show receipt (preimage?). in case of an on-chain tx it's trivial to check if the recipient address got the funds.
+5. `Bob` can prove when he paid an ln invoice such a 'receipt' is possible. so the mint can be challenged to show receipt (preimage?). in case of an on-chain tx it's trivial to check if the recipient address got the funds.
 
 ## Exchange Notes Fraud Proof
-1. After `Bob` signed a commitment to a transaction which in this case is a note swap, what he signs is that he will give `Alice` the `C'` for her `B' (+DLEQ proof)` if the previous `x0` is revealed to him.
+1. After `Bob` signed a commitment to a transaction, which in this case is a note swap, what he signs is that he will give `Alice` the `C'` for her `B' (+DLEQ proof)` if the previous `x0` is revealed to him.
 2. `Alice` reveals `x0` to `Bob`, normally she gets `C' + DLEQ`.
 3. If `Bob` tries to defraud `Alice`, she will publish his signed message and `x0`
 4. Then `Bob` has to publish in defense the DLEQ including `C'`
