--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -9,56 +9,84 @@ Mint: `Bob`
 - `m` id of the mint (hash of the mint's descriptor)
 - `k` private key of mint (one for each amount)
 - `K` public key of mint (`K = kG`)
-- `Q` promise (blinded signature)
+- `C'` promise (blinded signature)
 
 ## Alice (user)
 
-- `r` private key (blinding factor)
-- `x` secret derived from `r` via one way function, corresponds to point `Y` on curve
-- `T` blinded message
-- `Z` proof (unblinded signature)
+- `x` secret, corresponds to point `Y` on curve
+- `r` secret nonce (blinding factor)
+- `B'` blinded message
+- `C` proof (unblinded signature)
 
 # Blind Diffie-Hellmann key exchange (BDHKE)
 
 - `Bob` (also known as mint `m`) publishes `K = kG`
-- `Alice` picks private key `r`
+- `Alice` picks private nonce `r`
 - `Alice` computes `x = hmac(m, r)` and computes `Y = hash_to_curve(x)`
-- `Alice` sends to `Bob`: `T = Y + rG` with `r` (**blinding**)
-- `Bob` sends back to `Alice` blinded key: `Q = kT` (these two steps are the DH key exchange) (**signing**)
-- `Alice` can calculate the unblinded key as `Q - rK = kY + krG - krG = kY = Z` (**unblinding**)
-- Alice can take the pair `(x, Z)` as a token and can send it to `Carol`.
-- `Carol` can send `(x, Z)` to `Bob` who then checks that `k*hash_to_curve(x) == Z` (**verification**), and if so treats it as a valid spend of a token, adding `x`  to the list of spent secrets.
+- `Alice` sends to `Bob`: `B' = Y + rG` with `r` (**blinding**)
+- `Bob` sends back to `Alice` blinded key: `C' = kB'` (these two steps are the DH key exchange) (**signing**)
+- `Alice` can calculate the unblinded key as `C' - rK = kY + krG - krG = kY = C` (**unblinding**)
+- Alice can take the pair `[x, C]` as a token and can send it to `Carol`.
+- `Carol` can send `[x, C]` to `Bob` who then checks that `k*hash_to_curve(x) == C` (**verification**), and if so treats it as a valid spend of a token, adding `x`  to the list of spent secrets.
 
 # Chaum-Pedersen Commitment (DLEQ)
 
 ## Bob (mint) creates DLEQ proof
 - `p` random nonce
 - `R1 = P = pG`
-- `R2 = pT` where `T` is the blinded message `Y + rG`
-- `e = hash(R1, R2, K, Q)`
+- `R2 = pB'` where `B'` is the blinded message `Y + rG`
+- `e = hash(R1, R2, K, C')`
 - `s = p + ek`
 
-`Bob` reveales to `Alice` the following vector: `(Q, e, s)`
+`Bob` reveales to `Alice` the following vector: `[C', e, s]`
 
 ## Alice (user) verifies DLEQ proof
 - `R1 = sG - eK`
-- `R2 = sT - eQ`
+- `R2 = sB' - eC'`
 
-`Alice` then checks `e == hash(R1, R2, K, Q)` to ensure `Bob` signed with private key `k` preventing secret tagging or deniability on `Q`.
+`Alice` then checks `e == hash(R1, R2, K, C')` to ensure `Bob` signed with private key `k` preventing secret tagging or deniability on `C'`.
 
-`Alice` reveales to `Carol` the following vector: `(m, r, Q, e, s)`
+# Alice requests DLEQ proof on C
 
-## Carol (user) computes blind signature and verifies DLEQ proof
-- `x = hmac(m, r)`
-- `Z = Q - rK`
-- `T = hash_to_curve(x) + rG`
+`Alice` without revealing `x` to `Bob` or breaking unlinkability, can ask him to prove the blind signature was created with his private key `x`.
+
+## What we wish to prove
+
+- `kY = C` where `K = kG`
+
+## Bob (mint) creates DLEQ proof
+
+`Bob` generates a random nonce `r` and calculates
+
+- `R1 = rG`
+- `R2 = rY`
+- `e = hash(R1, R2, Y, C)`
+- `s = r + e*k`
+
+### Verification
+
+As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in the following equations:
+
+- `sG = rG + eK`
+- `sY = rY + eC `(because` sY = rY + ekY` and `ekY = eC`)
+
+## Alice (user) verifies DLEQ proof
+
 - `R1 = sG - eK`
-- `R2 = sT - eQ`
-- `e == hash(R1, R2, K, Q)` (**verification**)
+- `R2 = sY - eC`
 
-`Carol` reveales to `Bob` the following vector: `(x, Z)` where `k*hash_to_curve(x) == Z`
+`Alice` then checks `e == hash(R1, R2, Y, C)` to ensure `Bob` signed with private key `k`.
 
-`Bob` is unable to link `T` (or `Q`)  to `x` and `Z` without knowing `r` which is only known to `Alice` and `Carol`.
+`Alice` reveales to `Carol` the following vector: `[m, K, x, C, e, s]`, which does not break unlinkability for `Alice` in case `Carol` is secretly `Bob`.
+
+
+## Carol (user) verifies DLEQ proof on (Y, C)
+- `Y = hash_to_curve(x)`
+- `R1 = sG - eK`
+- `R2 = sY - eC`
+- `e == hash(R1, R2, K, C')` (**verification**)
+
+`Carol` reveales to `Bob` the following vector: `[x, C]` to spend, or may query `Bob` the spent status of the token using `[Y, C]`.
 
 # Fraud Proofs
 
@@ -67,7 +95,7 @@ Mint: `Bob`
 - `C'` promise (blinded signature)
 - `C` proof (unblinded signature)
 
-**Problem:** When `Alice` (interchangeable with `Carol`) gives `Bob` the token `(x, C)`, `Bob` may include this token in his burn attestation, but he may choose to not honor his side in the transaction, like paying an lightning invoice, or handing out new ecash tokens in exchange. `Bob` can steal from `Alice`, and `Alice` has no way to prove it.
+**Problem:** When `Alice` (interchangeable with `Carol`) gives `Bob` the token `[x, C]`, `Bob` may include this token in his burn attestation, but he may choose to not honor his side in the transaction, like paying an lightning invoice, or handing out new ecash tokens in exchange. `Bob` can steal from `Alice`, and `Alice` has no way to prove it.
 
 **Solution:** Make `Bob` sign a *committment* to a transaction he will carry out if some specific secret is revealed by `Alice`. *(Generally it would be a set of secrets, but for the sake of simplicity we will describe the schemes with a singular token)*
 
@@ -82,7 +110,7 @@ Mint: `Bob`
 2. `Alice` by paying the invoice receives the `payment_secret` the `payment_hash` in the invoice, normally she gets `C' + DLEQ`.
 3. If `Bob` tries to defraud `Alice`, she will publish his signed message (which contains the `payment_hash`), and the `payment_secret`, proving she has completed her duty.
 4. Then `Bob` has to publish in defense the DLEQ including `C'`
-5. This allows `Aice` to get `(x, C)`
+5. This allows `Aice` to get `[x, C]`
 
 ## Spending Notes Fraud Proof
 1. `Alice` shall not reveal `x` when asking the mint if `Bob` will honor a note or not! Make `Bob` sign the answer with his key!
@@ -96,4 +124,4 @@ Mint: `Bob`
 2. `Alice` reveals `x0` to `Bob`, normally she gets `C' + DLEQ`.
 3. If `Bob` tries to defraud `Alice`, she will publish his signed message and `x0`
 4. Then `Bob` has to publish in defense the DLEQ including `C'`
-5. This allows `Aice` to get `(x, C)`
+5. This allows `Aice` to get `[x, C]`
