--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -84,7 +84,7 @@ As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in th
 - `Y = hash_to_curve(x)`
 - `R1 = sG - eK`
 - `R2 = sY - eC`
-- `e == hash(R1, R2, K, C')` (**verification**)
+- `e == hash(R1, R2, Y, C)` (**verification**)
 
 `Carol` reveales to `Bob` the following vector: `[x, C]` to spend, or may query `Bob` the spent status of the token using `[Y, C]`.
 
