--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -80,7 +80,7 @@ As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in th
 `Alice` reveales to `Carol` the following vector: `[m, K, x, C, e, s]`, which does not break unlinkability for `Alice` in case `Carol` is secretly `Bob`.
 
 
-## Carol (user) verifies DLEQ proof on (Y, C)
+## Carol (user) verifies DLEQ proof
 - `Y = hash_to_curve(x)`
 - `R1 = sG - eK`
 - `R2 = sY - eC`
