--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -48,7 +48,7 @@ Mint: `Bob`
 
 # Alice requests DLEQ proof on C
 
-`Alice` without revealing `x` to `Bob` or breaking unlinkability, can ask him to prove the blind signature was created with his private key `x`.
+`Alice` without revealing `x` to `Bob` or breaking unlinkability, can ask him to prove the blind signature was created with his private key `k`.
 
 ## What we wish to prove
 
