--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -48,7 +48,7 @@ Mint: `Bob`
 
 # Alice requests DLEQ proof on C
 
-`Alice` without revealing `x` to `Bob` or breaking unlinkability, can ask him to prove the blind signature was created with his private key `k`.
+`Alice` without revealing `x` to `Bob` or breaking unlinkability, can ask him to prove the signature `C` was created with his private key `k`.
 
 ## What we wish to prove
 
@@ -99,7 +99,7 @@ As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in th
 
 **Solution:** Make `Bob` sign a *committment* to a transaction he will carry out if some specific secret is revealed by `Alice`. *(Generally it would be a set of secrets, but for the sake of simplicity we will describe the schemes with a singular token)*
 
-**Summary:** Instead of revealing `x`, `Alice` gives `Bob` the value `Y` which is calculated using a one way function as `hash_to_curve(x)`. Since `kY = C`, and `k` is the private key `Bob` knows, he can verify that the point `Y` and the blind signature `C` are not forgeries, but if challenged, he can not produce the value `x`, that is only known to `Alice` for now.
+**Summary:** Instead of revealing `x`, `Alice` gives `Bob` the value `Y` which is calculated using a one way function as `hash_to_curve(x)`. Since `kY = C`, and `k` is the private key `Bob` knows, he can verify that the point `Y` and the unblinded signature `C` are not forgeries, but if challenged, he can not produce the value `x`, that is only known to `Alice` for now.
 
 **Challenge-response scheme:** `Bob` has a reputation to uphold, `Alice` can make him commit to statements that he can not reneg on, after signing an answer. `Bob` has a strong incentive to answer truthfully, otherwise he may proven to be a liar and a fraud.
 
@@ -116,8 +116,8 @@ As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in th
 1. `Alice` shall not reveal `x` when asking the mint if `Bob` will honor a note or not! Make `Bob` sign the answer with his key!
 2. If the answer is yes, ask `Bob` to sign a commitment to `Alice's` transaction, that he will honor it (can be an ln invoice), if `Alice` gives `Bob` the secret!
 3. If `Bob` signs the commitment but does not carry out his end it becomes provable (to different degrees)
-4. If `Bob` lies about his blind signature `Alice` can publicly shame him with her DLEQ proof
-5. `Bob` can prove when he paid an ln invoice such a 'receipt' is possible. so the mint can be challenged to show receipt (preimage?). in case of an on-chain tx it's trivial to check if the recipient address got the funds.
+4. If `Bob` lies about his signature `Alice` can publicly shame him with her DLEQ proof
+5. `Bob` can prove when he paid an ln invoice, knowing the `payment_secret` to the `payment_hash` such a 'receipt' which he would only possibly know if the payment completed. so the mint can be challenged to show that preimage. in case of an on-chain tx it's trivial to check if the recipient address got the funds.
 
 ## Exchange Notes Fraud Proof
 1. After `Bob` signed a commitment to a transaction, which in this case is a note swap, what he signs is that he will give `Alice` the `C'` for her `B' (+DLEQ proof)` if the previous `x0` is revealed to him.
