Add: PoL Abstract

--- a/docs/specs/40.md
+++ b/docs/specs/40.md
@@ -88,6 +88,12 @@ As `s = r + e*k` gets multiplied respectively with `G` and `Y`, it results in th
 
 `Carol` reveales to `Bob` the following vector: `[x, C]` to spend, or may query `Bob` the spent status of the token using `[Y, C]`.
 
+# Proof or Liabilities
+
+## Abstract
+
+By introducing the concept of **finite keysets** in a Chaumian ecash (which means the **keys are periodically retired** and a new keyset is published by the mint), the mint is able to produce mint and burn proofs that are publicly auditable. Clients **will not accept notes** from the mint that are signed by keys **belonging to closed epochs**, and they need to **ensure their mint and burn proofs are included** in the public attestations. The mint could produce **fake burn proofs** to *justify* debasement, but **once the old notes get swapped** in for new ones, the **burn proofs would outweigh the mint proofs** for that specific epoch.
+
 # Fraud Proofs
 
 - `x` secret derived from `r` via one way function, corresponds to point `Y` on curve
